<resources>
    <string name="app_name">CraftBid</string>
    <string name="title_activity_main">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Zalogowano jako: "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_listing">Create Listing</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
</resources>