<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_offerList">

    <fragment
        android:id="@+id/navigation_offerList"
        android:name="com.pl.craftbidapp.ui.offerList.OfferListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_offer_list"
        android:background="#F1F1F1"
        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.pl.craftbidapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pl.craftbidapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_myofferList"
        android:name="com.pl.craftbidapp.ui.myOfferList.MyOfferListFragment"
        android:label="My Offers"
        android:background="#F1F1F1"/>
</navigation>